Update 1.0.2: Allow multiple strings being fetched, fix non-unicode characters